--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,8 @@ baseURL: "faye-romero.github.io"
 title: Moritz-Maria von Igelfeld
 theme: PaperMod
 
+#test
+
 enableInlineShortcodes: true
 enableRobotsTXT: true
 pagination:
