--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseURL: "faye-romero.github.io" 
-title: Moritz-Maria von Igelfeld
+title: Faye Romero
 theme: PaperMod
 
 #test
@@ -14,25 +14,31 @@ taxonomies:
 
 menu:
     main:
-        - name: Books
-          url: books/
+        - name: SciComm
+          url: scicomm/
+          weight: 4
+        - name: Media
+          url: media/
           weight: 5 
-        - name: Papers
-          url: papers/
+        - name: Publications
+          url: publications/
           weight: 2
-        - name: Courses
-          url: courses/
-          weight: 3
-        - name: Data
-          url: data/
-          weight: 4 
-        - name: Blog
-          url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
-          weight: 6
+        - name: Research
+          url: research/
+          weight: 1
+        - name: Updates
+          url: updates/
+          weight: 6 
+        - name: Notebook
+          url: notebook/
+          weight: 3 
+#        - name: Blog
+#          url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+#          weight: 6
 
 params:
-    description: "This website hosts Moritz-Maria von Igelfeld's research papers, books, course materials, data, curriculum vitae, and contact information."
-    author: Moritz-Maria von Igelfeld
+    description: "This website hosts Faye Romero's research and career information."
+    author: Faye Romero
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
     defaultTheme: light
@@ -46,7 +52,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: ["books","courses","papers","data"]
+    MainSections: ["scicomm","courses","publications","data"]
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
@@ -56,50 +62,44 @@ params:
     math: true
     profileMode:
           enabled: true
-          title: Professor Dr von Igelfeld
-          subtitle: "I am a Professor in the Institute of Romance Philology at the University of Regensburg, Germany. My research focuses on Portuguese irregular verbs. I was a doctoral student of Professor Dr Dieter Vogelsang in Munich, and later a second assistant of Professor Walter Schoeffler-Henschell at the University of Wiesbaden."
-          imageUrl: "picture.jpeg"
+          title: Faye Romero
+          subtitle: "I am a Biology PhD candidate and NSF Graduate Research Fellow at the University of Rochester advised by <u>[Dr. Nancy Chen](https://popgenchenlab.github.io)</u>. My current research focuses on exploring the evolutionary and conservation genetics of small populations using the threatened <u>[Florida Scrub-Jay](https://www.archbold-station.org/projects/long-term-florida-scrub-jay-project/)</u> as a model system."
+          imageUrl: "Romero,Faye.png"
           imageWidth: 160
           imageHeight: 160
           buttons:
-            - name: Papers
-              url: papers/
-            - name: Data
-              url: data/
-            - name: Books
-              url: books/
-            - name: Courses
-              url: courses/
-            - name: Tags
-              url: tags/
-            - name: Archive
-              url: archive/
-            - name: Blog
-              url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
+            - name: Research
+              url: research/
+            - name: Publications
+              url: publications/
+            - name: Notebook
+              url: notebook/
+            - name: SciComm
+              url: scicomm/
+            - name: Media
+              url: media/
+            - name: Updates
+              url: updates/
+#            - name: Tags
+#              url: tags/
+#            - name: Archive
+#              url: archive/
+#            - name: Blog
+#              url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
 
     socialIcons:
         - name: CV
-          url: cv.pdf
+          url: FayeRomero_CV_Oct2025.pdf
         - name: Email
-          url: mailto:igelfeld@regensburg.edu
-        - name: Zoom
-          url: https://www.zoom.us/my/igelfeld
+          url: location/
         - name: Location
           url: location/
-        - name: Office Hours
-          url: officehours/
         - name: Google Scholar
-          url: https://scholar.google.com/citations?user=cL23w-4AAAAJ
+          url: https://scholar.google.com/citations?user=hDpEi8YAAAAJ&hl=en
         - name: GitHub
-          url: https://github.com/pmichaillat
-        - name: Substack
-          url: https://pmichaillat.substack.com
-        - name: YouTube
-          url: https://www.youtube.com/@pmichaillat
-        - name: Twitter
-          url: https://x.com/pmichaillat
+          url: https://github.com/faye-romero
         - name: Bluesky
-          url: https://bsky.app/profile/pmichaillat.bsky.social
+          url: https://bsky.app/profile/fayeromero.bsky.social
 
     assets:
         disableScrollBarStyle: true
@@ -107,8 +107,8 @@ params:
         hiddenInList: false
         hiddenInSingle: true
     label:
-      text: "Moritz-Maria von Igelfeld"
-      icon: favicon.ico
+      text: "Faye Romero"
+      icon: dna-icon.png
       iconHeight: 18
 
 markup:
